# interview-manager

./: .gitignore  CNAME  README.md  index.html  package-lock.json  package.json  style.css  tailwind.config.js
.github/workflows/: tauri_action.yml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: Audio.tsx  FileArea.tsx  HomeProject.tsx  Interview.tsx  Modal.tsx  NewFile.tsx  NewFileModal.tsx  SettingsModal.tsx  ShellLink.tsx  SidebarFile.tsx  Textarea.tsx  Website.tsx
src/utils/: formatDG.ts  formatRev.ts  makeFile.ts  makeLinkFile.ts  makeWebsiteFile.ts
